infrastructure/cluster/prod-kustomization.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: prod
  labels:
    name: prod
---
apiVersion: v1
kind: Namespace
metadata:
  name: infra
  labels:
    name: infra
